appId: ${APP_ID}
name: 'Prayer Times'
---
- launchApp:
    clearState: true
- evalScript: ${output.randomName = 'Mosque ' + faker.lorem().characters(5)}
- runFlow: "../../subflows/login.yaml"
- tapOn:
    text: ""
    index: 1
- tapOn: ""
- copyTextFrom:
    id: 'timeOffset'
- evalScript: ${output.before = maestro.copiedText}
- tapOn: ""
- copyTextFrom:
    id: 'timeOffset'
- evalScript: ${output.after = maestro.copiedText}
- assertTrue: ${output.before != output.after}








